--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <input type="text" placeholder="city" class="input" id ="wlinput">
 
       <script type="text/javascript" src="weather.js"></script>
-      <script type="text/javascript" src="settings.js"></script>
-      <script type="text/javascript" src="logic.js"></script>
+      <script type="text/javascript" src="time.js"></script>
       <link rel="stylesheet" type="text/css" href="style.css">
 
